# 00-ai-engineering-bootcamp-cohort-3

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py  app_prereq.py
apps/api/src/api/agents/: agents.py  graph.py  retrieval_generation.py  retrieval_generation_hybrid_search_reranking.py  retrieval_generation_sprint0.py  retrieval_generation_structured_outputs_sprint1.py  tools.py
apps/api/src/api/agents/prompts/: intent_router_agent.yaml  qa_agent.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  endpoints_sprint0.py  endpoints_sprint1.py  models.py
apps/chatbot_ui/src/chatbot_ui/: app.py  app_prereq.py  app_sprint0.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-intro.ipynb  02-Structucred-Outputs-RAG-pipeline.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_2/prompts/: retrieval_generation.yaml
notebooks/week_3/: 01-intro-langgraph.ipynb  02-query-rewriting.ipynb  03-router.ipynb  04-agent-single-turn.ipynb
notebooks/week_3/utils/: __init__.py  utils.py
